[package]
name = "picol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "4"
flume = "0.10.14"
futures-lite = "1"
io-uring = "0.5.13"
once_cell = "1"
libc = "0.2.139"

[dev-dependencies]
async-io = "1.12.0"
